setup gulp, add components

--- a/src/pages/card-group.html
+++ b/src/pages/card-group.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>JCA UI KIT</title>
-    <link href="./css/styles.css" rel="stylesheet">
+    <title>JCA UI KIT | Card Group</title>
+    <link href="../css/styles.css" rel="stylesheet">
   </head>
   <body>
     <div class="jca-layout">
@@ -16,7 +16,7 @@
 
       <div class="jca-sidebar">
         <ul class="jca-nav-card">
-          <li class="jca-nav-card__item jca-nav-card__item--active">
+          <li class="jca-nav-card__item">
             <div class="jca-nav-card__item-icon">
               <ion-icon name="home-outline"></ion-icon>
             </div>
@@ -32,7 +32,7 @@
               Timeline
             </a>
           </li>
-          <li class="jca-nav-card__item jca-nav-card__item">
+          <li class="jca-nav-card__item">
             <div class="jca-nav-card__item-icon">
               <ion-icon name="layers-outline"></ion-icon>
             </div>
@@ -40,7 +40,7 @@
               Cards
             </a>
           </li>
-          <li class="jca-nav-card__item">
+          <li class="jca-nav-card__item jca-nav-card__item--active">
             <div class="jca-nav-card__item-icon">
               <ion-icon name="grid-outline"></ion-icon>
             </div>
@@ -56,13 +56,38 @@
           <div class="row">
             <div class="col-md-12">
               <div class="jca-page-header">
-                <div class="jca-page-header__title">Home</div>
-                <div class="jca-page-header__subtitle">Basecamp</div>
+                <div class="jca-page-header__title">Card Group</div>
+                <div class="jca-page-header__subtitle">Cards linked without spaces</div>
               </div>
             </div>
           </div> 
           <div class="row">
-            
+            <div class="col-md-12">
+              <div class="jca-card-group">
+                <div class="jca-card-group__item">
+                  <div class="jca-card-group__title">Company</div>
+                  <div class="jca-card-group__content">Nike &reg;</div>
+                </div>
+                <div class="jca-card-group__item">
+                  <div class="jca-card-group__title">Fee ( hourly )</div>
+                  <div class="jca-card-group__content">
+                    0
+                  </div>
+                </div>
+                <div class="jca-card-group__item">
+                  <div class="jca-card-group__title">Deposit</div>
+                  <div class="jca-card-group__content">
+                    0
+                  </div>
+                </div>
+                <div class="jca-card-group__item">
+                  <div class="jca-card-group__title">Status</div>
+                  <div class="jca-card-group__content">
+                    Active
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
