--- a/src/pages/cards.html
+++ b/src/pages/cards.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>JCA UI KIT</title>
-    <link href="./css/styles.css" rel="stylesheet">
+    <title>JCA UI KIT | Cards</title>
+    <link href="../css/styles.css" rel="stylesheet">
   </head>
   <body>
     <div class="jca-layout">
@@ -16,7 +16,7 @@
 
       <div class="jca-sidebar">
         <ul class="jca-nav-card">
-          <li class="jca-nav-card__item jca-nav-card__item--active">
+          <li class="jca-nav-card__item">
             <div class="jca-nav-card__item-icon">
               <ion-icon name="home-outline"></ion-icon>
             </div>
@@ -32,7 +32,7 @@
               Timeline
             </a>
           </li>
-          <li class="jca-nav-card__item jca-nav-card__item">
+          <li class="jca-nav-card__item jca-nav-card__item--active">
             <div class="jca-nav-card__item-icon">
               <ion-icon name="layers-outline"></ion-icon>
             </div>
@@ -56,13 +56,25 @@
           <div class="row">
             <div class="col-md-12">
               <div class="jca-page-header">
-                <div class="jca-page-header__title">Home</div>
-                <div class="jca-page-header__subtitle">Basecamp</div>
+                <div class="jca-page-header__title">Cards</div>
+                <div class="jca-page-header__subtitle">The building blocks of all elements</div>
               </div>
             </div>
           </div> 
           <div class="row">
-            
+            <div class="col-md-6">
+              <div class="jca-card">
+                <div class="jca-card__header">
+                  Header
+                </div>
+                <div class="jca-card__content">
+                  Content
+                </div>
+                <div class="jca-card__footer">
+                  Footer
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
