add logo, clean up gulpfile

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="jca-layout">
       <div class="jca-logo">
-        <ion-icon name="logo-sass"></ion-icon>
+        <img src="./img/logo.svg" />
         JCA UI KIT
       </div>
       <div class="jca-topbar__menu">Menu</div>
