include dist for gh pages

--- a/src/pages/cards.html
+++ b/src/pages/cards.html
@@ -75,6 +75,25 @@
                 </div>
               </div>
             </div>
+
+            <div class="col-md-6">
+              <div class="jca-card">
+                <div class="jca-card__header">
+                  <div class="jca-card__header-text">
+                    LOCATIONS
+                   </div>
+                   <div class="jca-card__header-actions">
+                     <div class="btn btn-primary btn-sm">New Task</div>
+                   </div>
+                </div>
+                <div class="jca-card__content">
+                  Content
+                </div>
+                <div class="jca-card__footer">
+                  
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
