--- a/src/pages/vertical-timeline.html
+++ b/src/pages/vertical-timeline.html
@@ -63,7 +63,7 @@
           </div> 
           <div class="row">
             <div class="col-sm-12 col-lg-6 col-xl-4">
-              <div class="jca-card-timeline">
+              <div class="jca-card-timeline text-primary">
                 <div class="jca-card-timeline__header">
                   <div class="jca-card__header-text">
                     The Timeline
@@ -168,7 +168,7 @@
                   </div>
                 </div>
     
-                <div class="jca-card-timeline__item">
+                <div class="jca-card-timeline__item text-danger">
                   <div class="jca-card-timeline__meta">
                     <div class="jca-card-timeline__icon">
                       <ion-icon name="heart-dislike-outline"></ion-icon>
@@ -207,7 +207,7 @@
                   </div>
                 </div>
     
-                <div class="jca-card-timeline__item">
+                <div class="jca-card-timeline__item text-light bg-danger">
                   <div class="jca-card-timeline__meta">
                     <div class="jca-card-timeline__icon">
                       2
@@ -223,7 +223,7 @@
                   </div>
                 </div>
 
-                <div class="jca-card-timeline__item">
+                <div class="jca-card-timeline__item text-light bg-success">
                   <div class="jca-card-timeline__meta">
                     <div class="jca-card-timeline__icon">
                       3
