--- a/src/pages/card-group.html
+++ b/src/pages/card-group.html
@@ -28,7 +28,7 @@
             <div class="jca-nav-card__item-icon">
               <ion-icon name="ellipsis-vertical-outline"></ion-icon>
             </div>
-            <a href="/pages/vertical-timeline.html" class="jca-nav-card__item-link">
+            <a href="../pages/vertical-timeline.html" class="jca-nav-card__item-link">
               Timeline
             </a>
           </li>
@@ -36,7 +36,7 @@
             <div class="jca-nav-card__item-icon">
               <ion-icon name="layers-outline"></ion-icon>
             </div>
-            <a href="/pages/cards.html" class="jca-nav-card__item-link">
+            <a href="../pages/cards.html" class="jca-nav-card__item-link">
               Cards
             </a>
           </li>
@@ -44,7 +44,7 @@
             <div class="jca-nav-card__item-icon">
               <ion-icon name="grid-outline"></ion-icon>
             </div>
-            <a href="/pages/card-group.html" class="jca-nav-card__item-link">
+            <a href="../pages/card-group.html" class="jca-nav-card__item-link">
               Card Group
             </a>
           </li>
@@ -93,8 +93,6 @@
       </div>
     </div>
 
-
-    
   </body>
   <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </html>
