--- a/src/pages/cards.html
+++ b/src/pages/cards.html
@@ -20,7 +20,7 @@
             <div class="jca-nav-card__item-icon">
               <ion-icon name="home-outline"></ion-icon>
             </div>
-            <a href="/" class="jca-nav-card__item-link">
+            <a href="../" class="jca-nav-card__item-link">
               Home
             </a>
           </li>
