--- a/src/pages/vertical-timeline.html
+++ b/src/pages/vertical-timeline.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>JCA UI KIT | Vertical Timeline</title>
-    <link href="../css/styles.css" rel="stylesheet">
+    <link href="../css/jca-ui-kit.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="jca-layout">
@@ -46,6 +46,14 @@
             </div>
             <a href="../pages/card-group.html" class="jca-nav-card__item-link">
               Card Group
+            </a>
+          </li>
+          <li class="jca-nav-card__item">
+            <div class="jca-nav-card__item-icon">
+              <ion-icon name="pricetags-outline"></ion-icon>
+            </div>
+            <a href="../pages/tags.html" class="jca-nav-card__item-link">
+              Tags
             </a>
           </li>
         </ul>
