--- a/src/pages/tags.html
+++ b/src/pages/tags.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>JCA UI KIT | Cards</title>
+    <title>JCA UI KIT | Tags</title>
     <link href="../css/jca-ui-kit.min.css" rel="stylesheet">
   </head>
   <body>
@@ -32,7 +32,7 @@
               Timeline
             </a>
           </li>
-          <li class="jca-nav-card__item jca-nav-card__item--active">
+          <li class="jca-nav-card__item">
             <div class="jca-nav-card__item-icon">
               <ion-icon name="layers-outline"></ion-icon>
             </div>
@@ -48,7 +48,7 @@
               Card Group
             </a>
           </li>
-          <li class="jca-nav-card__item">
+          <li class="jca-nav-card__item jca-nav-card__item--active">
             <div class="jca-nav-card__item-icon">
               <ion-icon name="pricetags-outline"></ion-icon>
             </div>
@@ -64,42 +64,61 @@
           <div class="row">
             <div class="col-md-12">
               <div class="jca-page-header">
-                <div class="jca-page-header__title">Cards</div>
-                <div class="jca-page-header__subtitle">The building blocks of all elements</div>
+                <div class="jca-page-header__title">Tags</div>
+                <div class="jca-page-header__subtitle">A card full of tags</div>
               </div>
             </div>
           </div> 
           <div class="row">
             <div class="col-md-6">
-              <div class="jca-card">
-                <div class="jca-card__header">
-                  Header
+              <div class="jca-card-tags jca-card-tags--5-col m-b-20">
+                <div class="jca-card-tags__item">
+                  # marketing
                 </div>
-                <div class="jca-card__content">
-                  Content
+                <div class="jca-card-tags__item">
+                  # digital
                 </div>
-                <div class="jca-card__footer">
-                  Footer
+                <div class="jca-card-tags__item">
+                  # marketing
                 </div>
-              </div>
-            </div>
+                <div class="jca-card-tags__item">
+                  # marketing 101
+                </div>
+                <div class="jca-card-tags__item">
+                  # marketing digital
+                </div>
+                <div class="jca-card-tags__item">
+                  # ngành marketing
+                </div>
+                <div class="jca-card-tags__item">
+                  # marketing online
+                </div>
+                <div class="jca-card-tags__item">
+                  # marketing strategy
+                </div>
+                <div class="jca-card-tags__item">
+                  # social media marketing
+                </div>
+                <div class="jca-card-tags__item">
+                  # nghề marketing
+                </div>
+                <div class="jca-card-tags__item">
+                  # marketing cơ bản
+                </div>
+                <div class="jca-card-tags__item">
+                  # marketing basics
+                </div>
+                <div class="jca-card-tags__item">
+                  # online marketing
+                </div>
+                <div class="jca-card-tags__item">
+                  # marketing career
+                </div>
+                <div class="jca-card-tags__item">
+                  # internet marketing
+                </div>
 
-            <div class="col-md-6">
-              <div class="jca-card">
-                <div class="jca-card__header">
-                  <div class="jca-card__header-text">
-                    LOCATIONS
-                   </div>
-                   <div class="jca-card__header-actions">
-                     <div class="btn btn-primary btn-sm">New Task</div>
-                   </div>
-                </div>
-                <div class="jca-card__content">
-                  Content
-                </div>
-                <div class="jca-card__footer">
-                  
-                </div>
+                <!-- ,,,,,,,,,,,,business marketing,principles of marketing,marketing mix,marketing 4.0,marketing tips,marketing show,marketing jobs,marketing là gì,email marketing,marketing major,que es marketing,kỹ năng marketing,content marketing,9 bài học marketing,marketing hiệu quả -->
               </div>
             </div>
           </div>
