--- a/src/pages/card-group.html
+++ b/src/pages/card-group.html
@@ -72,7 +72,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="jca-card-group">
-                <div class="jca-card-group__item">
+                <div class="jca-card-group__item bg-danger text-light">
                   <div class="jca-card-group__title">Company</div>
                   <div class="jca-card-group__content">Nike &reg;</div>
                 </div>
@@ -88,10 +88,10 @@
                     0
                   </div>
                 </div>
-                <div class="jca-card-group__item">
+                <div class="jca-card-group__item bg-success text-light">
                   <div class="jca-card-group__title">Status</div>
                   <div class="jca-card-group__content">
-                    Active
+                    Active - Pending payment
                   </div>
                 </div>
               </div>
