--- a/src/pages/tags.html
+++ b/src/pages/tags.html
@@ -4,130 +4,196 @@
     <meta charset="UTF-8">
     <title>JCA UI KIT | Tags</title>
     <link href="../css/jca-ui-kit.min.css" rel="stylesheet">
+    <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule="" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
   </head>
   <body>
-    <div class="jca-layout">
-      <div class="jca-logo">
-        <img src="../img/logo.svg" />
-        JCA UI KIT
-      </div>
-      <div class="jca-topbar__menu">Menu</div>
+    <div class="jca-loader">
+      <img src="../img/loader.svg" />
+      <p>... LOADING ...</p>
+    </div>
 
+    <div class="jca-layout d-none">
+      <div class="jca-topbar">
+        <div class="jca-logo">
+          <img src="../img/logo.svg" />
+          JCA UI KIT
+        </div>
+        <ul class="jca-topbar__nav">
+          <li class="jca-topbar__nav-item">
+            <div class="jca-topbar__nav-content">
+              <ion-icon class="jca-topbar__nav-icon" name="home-outline"></ion-icon>
+              <a href="#">Home</a>
+            </div>
+          </li>
 
-      <div class="jca-sidebar">
-        <ul class="jca-nav-card">
-          <li class="jca-nav-card__item">
-            <div class="jca-nav-card__item-icon">
-              <ion-icon name="home-outline"></ion-icon>
+          <li class="jca-topbar__nav-item">
+            <div class="jca-topbar__nav-content">
+              <ion-icon class="jca-topbar__nav-icon" name="mail-outline"></ion-icon>
+              <a href="#">Inbox</a>
             </div>
-            <a href="../" class="jca-nav-card__item-link">
-              Home
-            </a>
           </li>
-          <li class="jca-nav-card__item">
-            <div class="jca-nav-card__item-icon">
-              <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+
+          <li class="jca-topbar__nav-item">
+            <div class="jca-topbar__nav-content">
+              <ion-icon class="jca-topbar__nav-icon" name="today-outline"></ion-icon>
+              <a href="#">Consultations</a>
             </div>
-            <a href="../pages/vertical-timeline.html" class="jca-nav-card__item-link">
-              Timeline
-            </a>
           </li>
-          <li class="jca-nav-card__item">
-            <div class="jca-nav-card__item-icon">
-              <ion-icon name="layers-outline"></ion-icon>
+
+          <li class="jca-topbar__nav-item dropdown">
+            <div class="jca-topbar__nav-content dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <ion-icon class="jca-topbar__nav-icon" name="person-circle-outline"></ion-icon>
+              <a href="#">Profile</a>
             </div>
-            <a href="../pages/cards.html" class="jca-nav-card__item-link">
-              Cards
-            </a>
-          </li>
-          <li class="jca-nav-card__item">
-            <div class="jca-nav-card__item-icon">
-              <ion-icon name="grid-outline"></ion-icon>
+            <div class="dropdown-menu animated fadeInUp" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Logout</a>
             </div>
-            <a href="../pages/card-group.html" class="jca-nav-card__item-link">
-              Card Group
-            </a>
-          </li>
-          <li class="jca-nav-card__item jca-nav-card__item--active">
-            <div class="jca-nav-card__item-icon">
-              <ion-icon name="pricetags-outline"></ion-icon>
-            </div>
-            <a href="../pages/tags.html" class="jca-nav-card__item-link">
-              Tags
-            </a>
           </li>
         </ul>
       </div>
 
-      <div class="jca-content">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="jca-page-header">
-                <div class="jca-page-header__title">Tags</div>
-                <div class="jca-page-header__subtitle">A card full of tags</div>
+      <div class="jca-main">
+        <div class="jca-sidebar">
+          <ul class="jca-nav-card">
+            <li class="jca-nav-card__item">
+              <div class="jca-nav-card__item-icon">
+                <ion-icon name="home-outline"></ion-icon>
               </div>
-            </div>
-          </div> 
-          <div class="row">
-            <div class="col-md-6">
-              <div class="jca-card-tags jca-card-tags--5-col m-b-20">
-                <div class="jca-card-tags__item">
-                  # marketing
+              <a href="../" class="jca-nav-card__item-link">
+                Home
+              </a>
+            </li>
+            <li class="jca-nav-card__item">
+              <div class="jca-nav-card__item-icon">
+                <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+              </div>
+              <a href="../pages/vertical-timeline.html" class="jca-nav-card__item-link">
+                Timeline
+              </a>
+            </li>
+            <li class="jca-nav-card__item">
+              <div class="jca-nav-card__item-icon">
+                <ion-icon name="layers-outline"></ion-icon>
+              </div>
+              <a href="../pages/cards.html" class="jca-nav-card__item-link">
+                Cards
+              </a>
+            </li>
+            <li class="jca-nav-card__item">
+              <div class="jca-nav-card__item-icon">
+                <ion-icon name="grid-outline"></ion-icon>
+              </div>
+              <a href="../pages/card-group.html" class="jca-nav-card__item-link">
+                Card Group
+              </a>
+            </li>
+            <li class="jca-nav-card__item jca-nav-card__item--active">
+              <div class="jca-nav-card__item-icon">
+                <ion-icon name="pricetags-outline"></ion-icon>
+              </div>
+              <a href="../pages/tags.html" class="jca-nav-card__item-link">
+                Tags
+              </a>
+            </li>
+          </ul>
+        </div>
+  
+        <div class="jca-content">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="jca-page-header">
+                  <div class="jca-page-header__title">Tags</div>
+                  <div class="jca-page-header__subtitle">A card full of tags</div>
                 </div>
-                <div class="jca-card-tags__item">
-                  # digital
+              </div>
+            </div> 
+            <div class="row">
+              <div class="col-md-8">
+                <div class="jca-card-tags jca-card-tags--3-col m-b-20">
+                  <div class="jca-card-tags__items">
+                    <div class="jca-card-tags__item">
+                      # marketing
+                    </div>
+                    <div class="jca-card-tags__item">
+                      # digital
+                    </div>
+                    <div class="jca-card-tags__item">
+                      # marketing
+                    </div>
+                    <div class="jca-card-tags__item">
+                      # marketing 101
+                    </div>
+                    <div class="jca-card-tags__item">
+                      # marketing digital
+                    </div>
+                    <div class="jca-card-tags__item">
+                      # ngành marketing
+                    </div>
+                    <div class="jca-card-tags__item">
+                      # marketing online
+                    </div>
+                    <div class="jca-card-tags__item">
+                      # marketing strategy
+                    </div>
+                    <div class="jca-card-tags__item">
+                      # social media marketing
+                    </div>
+                    <div class="jca-card-tags__item">
+                      # nghề marketing
+                    </div>
+                    <div class="jca-card-tags__item">
+                      # marketing cơ bản
+                    </div>
+                    <div class="jca-card-tags__item">
+                      # marketing basics
+                    </div>
+                    <div class="jca-card-tags__item">
+                      # online marketing
+                    </div>
+                    <div class="jca-card-tags__item">
+                      # marketing career
+                    </div>
+                    <div class="jca-card-tags__item">
+                      # internet marketing
+                    </div>
+                  </div>
+  
+                  <!-- ,,,,,,,,,,,,business marketing,principles of marketing,marketing mix,marketing 4.0,marketing tips,marketing show,marketing jobs,marketing là gì,email marketing,marketing major,que es marketing,kỹ năng marketing,content marketing,9 bài học marketing,marketing hiệu quả -->
                 </div>
-                <div class="jca-card-tags__item">
-                  # marketing
-                </div>
-                <div class="jca-card-tags__item">
-                  # marketing 101
-                </div>
-                <div class="jca-card-tags__item">
-                  # marketing digital
-                </div>
-                <div class="jca-card-tags__item">
-                  # ngành marketing
-                </div>
-                <div class="jca-card-tags__item">
-                  # marketing online
-                </div>
-                <div class="jca-card-tags__item">
-                  # marketing strategy
-                </div>
-                <div class="jca-card-tags__item">
-                  # social media marketing
-                </div>
-                <div class="jca-card-tags__item">
-                  # nghề marketing
-                </div>
-                <div class="jca-card-tags__item">
-                  # marketing cơ bản
-                </div>
-                <div class="jca-card-tags__item">
-                  # marketing basics
-                </div>
-                <div class="jca-card-tags__item">
-                  # online marketing
-                </div>
-                <div class="jca-card-tags__item">
-                  # marketing career
-                </div>
-                <div class="jca-card-tags__item">
-                  # internet marketing
-                </div>
-
-                <!-- ,,,,,,,,,,,,business marketing,principles of marketing,marketing mix,marketing 4.0,marketing tips,marketing show,marketing jobs,marketing là gì,email marketing,marketing major,que es marketing,kỹ năng marketing,content marketing,9 bài học marketing,marketing hiệu quả -->
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
-
-    
   </body>
-  <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous">
+  </script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous">
+  </script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous">
+  </script>
+  
+  <script type="text/javascript">
+    document.addEventListener("DOMContentLoaded", function(event) {
+      var loader = document.querySelector('.jca-loader');
+      var content = document.querySelector('.jca-layout');
+
+      setTimeout(function() {
+        loader.classList.add('d-none');
+        content.classList.remove('d-none');
+      }, 1000);
+    });
+  </script>
 </html>
