--- a/src/pages/cards.html
+++ b/src/pages/cards.html
@@ -96,11 +96,19 @@
                 Tags
               </a>
             </li>
+            <li class="jca-nav-card__item">
+              <div class="jca-nav-card__item-icon">
+                <ion-icon name="card-outline"></ion-icon>
+              </div>
+              <a href="../pages/pricing.html" class="jca-nav-card__item-link">
+                Pricing
+              </a>
+            </li>
           </ul>
         </div>
   
         <div class="jca-content">
-          <div class="container">
+          <div class="containe">
             <div class="row">
               <div class="col-md-12">
                 <div class="jca-page-header">
