--- a/src/pages/cards.html
+++ b/src/pages/cards.html
@@ -104,6 +104,14 @@
                 Pricing
               </a>
             </li>
+            <li class="jca-nav-card__item">
+              <div class="jca-nav-card__item-icon">
+                <ion-icon name="reader-outline"></ion-icon>
+              </div>
+              <a href="../pages/feed.html" class="jca-nav-card__item-link">
+                Feed
+              </a>
+            </li>
           </ul>
         </div>
   
@@ -180,7 +188,7 @@
       setTimeout(function() {
         loader.classList.add('d-none');
         content.classList.remove('d-none');
-      }, 1000);
+      }, 100);
     });
   </script>
 </html>
