--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -146,7 +146,18 @@
                 marianne.
               </div>
               <div class="jca-card-feed__tags">
-                #black #girl #style #fashion #blackfriday #inktober2019 #blackandwhite #smile #happy #white #art #inktober 
+                <a href="#">#black</a>
+                <a href="#">#girl</a>
+                <a href="#">#style</a>
+                <a href="#">#fashion</a>
+                <a href="#">#blackfriday</a>
+                <a href="#">#inktober2019</a>
+                <a href="#">#blackandwhite</a>
+                <a href="#">#smile</a>
+                <a href="#">#happy</a>
+                <a href="#">#white</a>
+                <a href="#">#art</a>
+                <a href="#">#inktober</a> 
               </div>
               <div class="jca-card-feed__actions">
                 <a href="#" class="jca-card-feed__actions-item bg-success text-light">
@@ -191,7 +202,18 @@
                   alt="media" />
               </div>
               <div class="jca-card-feed__tags">
-                #black #girl #style #fashion #blackfriday #inktober2019 #blackandwhite #smile #happy #white #art #inktober 
+                <a href="#">#black</a>
+                <a href="#">#girl</a>
+                <a href="#">#style</a>
+                <a href="#">#fashion</a>
+                <a href="#">#blackfriday</a>
+                <a href="#">#inktober2019</a>
+                <a href="#">#blackandwhite</a>
+                <a href="#">#smile</a>
+                <a href="#">#happy</a>
+                <a href="#">#white</a>
+                <a href="#">#art</a>
+                <a href="#">#inktober</a>
               </div>
               <div class="jca-card-feed__actions">
                 <div class="jca-card-feed__actions-item">
