--- a/src/pages/pricing.html
+++ b/src/pages/pricing.html
@@ -161,9 +161,16 @@
                     </li>
                   </ul>
                 </div>
+ 
 
-                <div class="jca-card-pricing__footer">
-                  <div class="btn">SIGN UP</div>
+                <div class="jca-card-pricing__actions">
+                  <a href="#" class="jca-card-pricing__actions-item bg-success text-light">
+                    Sign up
+                  </a>
+  
+                  <a href="#" class="jca-card-pricing__actions-item bg-info">
+                    Contact Us
+                  </a>
                 </div>
               </div>
             </div>
@@ -204,8 +211,14 @@
                   </ul>
                 </div>
 
-                <div class="jca-card-pricing__footer">
-                  <div class="btn">SIGN UP</div>
+                <div class="jca-card-pricing__actions">
+                  <a href="#" class="jca-card-pricing__actions-item bg-success text-light">
+                    Sign up
+                  </a>
+  
+                  <a href="#" class="jca-card-pricing__actions-item bg-info">
+                    Contact Us
+                  </a>
                 </div>
               </div>
             </div>
@@ -246,8 +259,14 @@
                   </ul>
                 </div>
 
-                <div class="jca-card-pricing__footer">
-                  <div class="btn">SIGN UP</div>
+                <div class="jca-card-pricing__actions">
+                  <a href="#" class="jca-card-pricing__actions-item bg-success text-light">
+                    Sign up
+                  </a>
+  
+                  <a href="#" class="jca-card-pricing__actions-item bg-info">
+                    Contact Us
+                  </a>
                 </div>
               </div>
             </div>
