--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -115,6 +115,14 @@
               Feed
             </a>
           </li>
+          <li class="jca-nav-card__item">
+            <div class="jca-nav-card__item-icon">
+              <ion-icon name="flash-outline"></ion-icon>
+            </div>
+            <a href="../pages/notifications.html" class="jca-nav-card__item-link">
+              Notifications
+            </a>
+          </li>
         </ul>
       </div>
 
@@ -122,7 +130,10 @@
         <div class="row">
           <div class="col-md-12">
             <div class="jca-page-header">
-              <div class="jca-page-header__title">Feed</div>
+              <div class="jca-page-header__title">
+                <ion-icon class="jca-page-header__icon" name="reader-outline"></ion-icon>
+                Feed
+              </div>
               <div class="jca-page-header__subtitle">Cards for feeds and stories</div>
             </div>
           </div>
