--- a/src/pages/pricing.html
+++ b/src/pages/pricing.html
@@ -112,6 +112,14 @@
                 Feed
               </a>
             </li>
+            <li class="jca-nav-card__item">
+              <div class="jca-nav-card__item-icon">
+                <ion-icon name="flash-outline"></ion-icon>
+              </div>
+              <a href="../pages/notifications.html" class="jca-nav-card__item-link">
+                Notifications
+              </a>
+            </li>
           </ul>
         </div>
   
@@ -119,7 +127,10 @@
           <div class="row">
             <div class="col-md-12">
               <div class="jca-page-header">
-                <div class="jca-page-header__title">Pricing</div>
+                <div class="jca-page-header__title">
+                  <ion-icon class="jca-page-header__icon" name="card-outline"></ion-icon>
+                  Pricing
+                </div>
                 <div class="jca-page-header__subtitle">Pricing cards</div>
               </div>
             </div>
