--- a/src/pages/tags.html
+++ b/src/pages/tags.html
@@ -112,6 +112,14 @@
                 Feed
               </a>
             </li>
+            <li class="jca-nav-card__item">
+              <div class="jca-nav-card__item-icon">
+                <ion-icon name="flash-outline"></ion-icon>
+              </div>
+              <a href="../pages/notifications.html" class="jca-nav-card__item-link">
+                Notifications
+              </a>
+            </li>
           </ul>
         </div>
   
@@ -120,7 +128,10 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="jca-page-header">
-                  <div class="jca-page-header__title">Tags</div>
+                  <div class="jca-page-header__title">
+                    <ion-icon class="jca-page-header__icon" name="pricetags-outline"></ion-icon>
+                    Tags
+                  </div>
                   <div class="jca-page-header__subtitle">A card full of tags</div>
                 </div>
               </div>
