--- a/src/pages/cards.html
+++ b/src/pages/cards.html
@@ -60,7 +60,7 @@
               <div class="jca-nav-card__item-icon">
                 <ion-icon name="home-outline"></ion-icon>
               </div>
-              <a href="../" class="jca-nav-card__item-link">
+              <a href="../pages/home.html" class="jca-nav-card__item-link">
                 Home
               </a>
             </li>
