--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>JCA UI KIT | Landing</title>
-    <link href="../css/jca-ui-kit.min.css" rel="stylesheet">
+    <link href="./css/jca-ui-kit.min.css" rel="stylesheet">
     <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
 
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="jca-loader">
-      <img src="../img/loader.svg" />
+      <img src="./img/loader.svg" />
       <p>... LOADING ...</p>
     </div>
 
@@ -24,7 +24,7 @@
               <div class="col-md-6">
                 <div class="jca-landing-intro">
                   <div class="jca-landing-intro__logo">
-                    <img src="../img/logo.svg" />
+                    <img src="./img/logo.svg" />
                     JCA UI KIT
                   </div>
                   <div class="jca-landing-intro__text">
