--- a/src/pages/card-group.html
+++ b/src/pages/card-group.html
@@ -16,8 +16,10 @@
     <div class="jca-layout d-none">
       <div class="jca-topbar">
         <div class="jca-logo">
-          <img src="../img/logo.svg" />
-          JCA UI KIT
+          <a href="/">
+            <img src="../img/logo.svg" />
+            JCA UI KIT
+          </a>
         </div>
         <ul class="jca-topbar__nav">
           <li class="jca-topbar__nav-item">
@@ -66,7 +68,7 @@
             </li>
             <li class="jca-nav-card__item">
               <div class="jca-nav-card__item-icon">
-                <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+                <ion-icon name="hourglass-outline"></ion-icon>
               </div>
               <a href="../pages/vertical-timeline.html" class="jca-nav-card__item-link">
                 Timeline
