--- a/src/pages/vertical-timeline.html
+++ b/src/pages/vertical-timeline.html
@@ -16,8 +16,10 @@
     <div class="jca-layout d-none">
       <div class="jca-topbar">
         <div class="jca-logo">
-          <img src="../img/logo.svg" />
-          JCA UI KIT
+          <a href="/">
+            <img src="../img/logo.svg" />
+            JCA UI KIT
+          </a>
         </div>
         <ul class="jca-topbar__nav">
           <li class="jca-topbar__nav-item">
@@ -66,7 +68,7 @@
             </li>
             <li class="jca-nav-card__item jca-nav-card__item--active">
               <div class="jca-nav-card__item-icon">
-                <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+                <ion-icon name="hourglass-outline"></ion-icon>
               </div>
               <a href="../pages/vertical-timeline.html" class="jca-nav-card__item-link">
                 Timeline
@@ -129,8 +131,8 @@
               <div class="col-md-12">
                 <div class="jca-page-header">
                   <div class="jca-page-header__title">
-                    <ion-icon class="jca-page-header__icon" name="ellipsis-vertical-outline"></ion-icon>
-                    Vertical Timeline
+                    <ion-icon class="jca-page-header__icon" name="hourglass-outline"></ion-icon>
+                    Timeline
                   </div>
                   <div class="jca-page-header__subtitle">Visual sequence of events</div>
                 </div>
